--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,6 +17,7 @@ include_directories(
     ${GMODULE_INCLUDE_DIRS}
     ${TRANSFER_INDICATOR_INCLUDE_DIRS}
     ${URL_DISPATCHER_INCLUDE_DIRS}
+    ${ACCOUNTS_QT5_INCLUDE_DIRS}
 )
 
 target_link_libraries(${BUTEO_TRANSFERS_PLUGIN}
@@ -26,6 +27,7 @@ target_link_libraries(${BUTEO_TRANSFERS_PLUGIN}
     ${GMODULE_LIBRARIES}
     ${TRANSFER_INDICATOR_LIBRARIES}
     ${URL_DISPATCHER_LIBRARIES}
+    ${ACCOUNTS_QT5_LIBRARIES}
 )
 
 add_definitions(-std=c++11)
